# forthc

./: .gitignore  CMakeLists.txt  asm.cc  asm.h  asm.hh  colors.hh  debug.cc  debug.hh  error.cc  error.hh  fib.forth  forth.l  forth.y  lexer.cc  lexer.hh  main.cc  makefile  parser.cc  parser.hh  random.cc  random.hh  readme.md  readme.txt  test-puti.forth  test-vars.forth  test-while.forth  test.forth  test.s  tokens.hh
bootstrap/: booleans.forth  endl.forth  io-aliases.forth  sizes.forth  spaces.forth
common/: macros.s
generic/: drop.s  dup.s  equal.s  getbyteptr.s  getptr.s  greaterthan.s  lessthan.s  over.s  setptr.s  spaceship.s  swap.s  third.s  tuck.s
linux/: _start.s  key.s  puti.s  puts.s  streq.s  strlen.s  writes.s
test/: should=.forth  test.forth
